--- a/project/src/main/res/values-da/strings.xml
+++ b/project/src/main/res/values-da/strings.xml
@@ -228,6 +228,8 @@
     <string name="reservation_time_too_short">Forlæng reservationsperioden.</string>
     <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">Er du der stadig? Din session er udløbet. Prøv venligst igen.</string>
+    <!-- Shown to user when they try to book something already booked in new Hotels -->
+    <string name="reservation_already_exists_new_hotels">Denne reservation er gennemført. Kontroller venligst dine rejser eller din e-mail.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">Hmm. Det ser ud til, at du allerede har reserveret denne rejse. Kontroller venligst dine rejser eller din e-mail.</string>
     <!-- Show to user when the price of a car they are trying to book has changed -->
@@ -236,6 +238,8 @@
     <string name="reservation_invalid_name">Navne må ikke indeholder tal eller specialtegn.</string>
     <!-- Show to user when their phone number is invalid -->
     <string name="reservation_invalid_phone">Telefonnummeret skal være på 4-20 tal.</string>
+    <!-- Error button text indicating that the user should search again -->
+    <string name= "search_again">Søg igen</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">Hmm… din betaling gik ikke igennem. Kontroller venligst dine betalingsoplysninger, og prøv igen.</string>
@@ -2029,6 +2033,12 @@
     <string name="email_address_hint">E-mailadresse</string>
     <!-- phone number hint -->
     <string name="phone_number_hint">Telefon</string>
+    <!-- phone number -->
+    <string name="phone_number_field_text">telefonnummer</string>
+    <!-- first name -->
+    <string name="first_name_field_text">fornavn</string>
+    <!-- last name -->
+    <string name="last_name_field_text">efternavn</string>
     <!-- Cardholder -->
     <string name="cardholder">Kortindehaver</string>
     <!-- email disclaimer -->
@@ -2143,6 +2153,8 @@
     <string name="select_a_different_traveler">Vælg en anden rejsende</string>
     <!-- Enter a new traveler -->
     <string name="enter_new_traveler">Indtast en ny rejsende</string>
+    <!-- Edit current traveler details -->
+    <string name="edit_guest_details">Rediger oplysninger om gæst</string>
     <!-- Edit current traveler details -->
     <string name="edit_current_traveler">Rediger oplysninger om rejsende</string>
     <!-- prefers seat template -->
@@ -2330,6 +2342,14 @@
     <string name="error_hotel_no_longer_available">Vi beklager meget, men tiden er udløbet, og værelset er ikke længere til rådighed</string>
     <!-- Button label imploring users to pick a new hotel room due to unavailability -->
     <string name="pick_new_hotel">Vælg et nyt hotel</string>
+    <!-- Text for hotel error unknown -->
+    <string name="error_hotel_unhandled">Vi beklager, men det ser ud til, at vi ikke kan gennemføre din reservation i øjeblikket. Prøv venligst igen.</string>
+    <!-- Text for hotel error toolbar duplicate trip-->
+    <string name="hotel_duplicate_trip_text">Dobbeltbooket rejse</string>
+    <!-- Text for hotel error toolbar payment failed-->
+    <string name="hotel_payment_failed_text">Betalingen mislykkedes</string>
+    <!-- Text for error toolbar session expired-->
+    <string name="session_timeout">Sessionen er udløbet</string>
 
     <!-- Credit card input section -->
     <string name="one">1</string>
@@ -2734,6 +2754,8 @@
         <item quantity="many">Vis %d anmeldelser</item>
         <item quantity="other">Vis %d anmeldelser</item>
     </plurals>
+
+    <string name="zero_reviews">0 anmeldelser</string>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -3129,10 +3151,12 @@
     <string name="e3_error_checkout_payment_failed">Vi var desværre ikke i stand til at gennemføre købet. Kontroller venligst, at du har indtastet de korrekte oplysninger.</string>
     <!-- There is invalid expiration date for the credit card used. Please fix it. -->
     <string name="e3_error_checkout_invalid_expiration">Kreditkortets udløbsdato ugyldig.</string>
+    <!-- Error message displayed when the traveler information is invalid -->
+    <string name="e3_error_checkout_invalid_traveler_info_TEMPLATE">Indtast venligst et gyldigt %1$s</string>
 
     <!-- SearchResults API method -->
     <!-- For some reason the API failed and we couldn't complete the search -->
-    <string name="e3_error_search_results_hotel_service_failure">Vi kunne desværre ikke færdiggøre din søgning. Forsøg venligst igen.</string>
+    <string name="e3_error_search_results_hotel_service_failure">Vi beklager, men vi kunne desværre ikke gennemføre din søgning. Forsøg venligst igen.</string>
     <!-- There were no results matching the input -->
     <string name="e3_error_search_results_invalid_input">Vi beklager, men vi er desværre ikke i stand til at vise resultater for din søgning. Forsøg venligst igen.</string>
     <!-- There were no results matching the input -->
