--- a/project/src/main/res/values-en-rGB/strings.xml
+++ b/project/src/main/res/values-en-rGB/strings.xml
@@ -228,6 +228,8 @@
     <string name="reservation_time_too_short">Please increase your reservation duration.</string>
     <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">Still there? Your session has expired. Please try your search again.</string>
+    <!-- Shown to user when they try to book something already booked in new Hotels -->
+    <string name="reservation_already_exists_new_hotels">This booking is complete. Please check your trips or email.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">Hmm. Looks like you already booked this trip. Please check your trips or email.</string>
     <!-- Show to user when the price of a car they are trying to book has changed -->
@@ -236,6 +238,8 @@
     <string name="reservation_invalid_name">Names must not contain numbers or special characters.</string>
     <!-- Show to user when their phone number is invalid -->
     <string name="reservation_invalid_phone">Phone number length must be between 4 and 20.</string>
+    <!-- Error button text indicating that the user should search again -->
+    <string name= "search_again">Search Again</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">Hmm…Your payment didn\&apos;t go through. Please double check your payment details and try again.</string>
@@ -2029,6 +2033,12 @@
     <string name="email_address_hint">Email Address</string>
     <!-- phone number hint -->
     <string name="phone_number_hint">Phone Number</string>
+    <!-- phone number -->
+    <string name="phone_number_field_text">phone number</string>
+    <!-- first name -->
+    <string name="first_name_field_text">first name</string>
+    <!-- last name -->
+    <string name="last_name_field_text">last name</string>
     <!-- Cardholder -->
     <string name="cardholder">Cardholder</string>
     <!-- email disclaimer -->
@@ -2143,6 +2153,8 @@
     <string name="select_a_different_traveler">Select a different traveller</string>
     <!-- Enter a new traveler -->
     <string name="enter_new_traveler">Enter a new traveller</string>
+    <!-- Edit current traveler details -->
+    <string name="edit_guest_details">last name</string>
     <!-- Edit current traveler details -->
     <string name="edit_current_traveler">Edit Traveller Information</string>
     <!-- prefers seat template -->
@@ -2330,6 +2342,14 @@
     <string name="error_hotel_no_longer_available">We\&apos;re really sorry, your hold on this room has expired</string>
     <!-- Button label imploring users to pick a new hotel room due to unavailability -->
     <string name="pick_new_hotel">Pick a New Hotel</string>
+    <!-- Text for hotel error unknown -->
+    <string name="error_hotel_unhandled">Sorry, we don\&apos;t seem to be able to process your order right now. Please try again.</string>
+    <!-- Text for hotel error toolbar duplicate trip-->
+    <string name="hotel_duplicate_trip_text">Duplicate Trip</string>
+    <!-- Text for hotel error toolbar payment failed-->
+    <string name="hotel_payment_failed_text">Payment Failed</string>
+    <!-- Text for error toolbar session expired-->
+    <string name="session_timeout">Session Timeout</string>
 
     <!-- Credit card input section -->
     <string name="one">1</string>
@@ -2734,6 +2754,8 @@
         <item quantity="many">View %d Reviews</item>
         <item quantity="other">View %d Reviews</item>
     </plurals>
+
+    <string name="zero_reviews">0 Reviews</string>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -3129,6 +3151,8 @@
     <string name="e3_error_checkout_payment_failed">We\&apos;re sorry, but we were unable to process your payment. Please verify that you entered your information correctly.</string>
     <!-- There is invalid expiration date for the credit card used. Please fix it. -->
     <string name="e3_error_checkout_invalid_expiration">Invalid credit card expiration date.</string>
+    <!-- Error message displayed when the traveler information is invalid -->
+    <string name="e3_error_checkout_invalid_traveler_info_TEMPLATE">Please enter a valid %1$s</string>
 
     <!-- SearchResults API method -->
     <!-- For some reason the API failed and we couldn't complete the search -->
