--- a/project/src/main/res/values-es-rES/strings.xml
+++ b/project/src/main/res/values-es-rES/strings.xml
@@ -228,6 +228,8 @@
     <string name="reservation_time_too_short">Debes aumentar la duración de la reserva.</string>
     <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">¿Aún sigues ahí? La sesión ha caducado. Vuelve a intentarlo.</string>
+    <!-- Shown to user when they try to book something already booked in new Hotels -->
+    <string name="reservation_already_exists_new_hotels">La reserva se ha realizado. Comprueba la sección Tus viajes o tu correo electrónico.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">Vaya. Parece que ya has reservado este viaje. Comprueba la sección Viajes o tu correo electrónico.</string>
     <!-- Show to user when the price of a car they are trying to book has changed -->
@@ -236,6 +238,8 @@
     <string name="reservation_invalid_name">Los nombres no pueden contener números o caracteres especiales.</string>
     <!-- Show to user when their phone number is invalid -->
     <string name="reservation_invalid_phone">El número de teléfono debe contener entre 4 y 20 dígitos.</string>
+    <!-- Error button text indicating that the user should search again -->
+    <string name= "search_again">Buscar de nuevo</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">Vaya, parece que no se ha podido procesar el pago. Comprueba tus datos de pago e inténtalo de nuevo.</string>
@@ -2029,6 +2033,12 @@
     <string name="email_address_hint">Dirección de correo electrónico</string>
     <!-- phone number hint -->
     <string name="phone_number_hint">Teléfono</string>
+    <!-- phone number -->
+    <string name="phone_number_field_text">teléfono</string>
+    <!-- first name -->
+    <string name="first_name_field_text">nombre</string>
+    <!-- last name -->
+    <string name="last_name_field_text">apellido</string>
     <!-- Cardholder -->
     <string name="cardholder">Titular de la tarjeta</string>
     <!-- email disclaimer -->
@@ -2143,6 +2153,8 @@
     <string name="select_a_different_traveler">Seleccionar un viajero diferente</string>
     <!-- Enter a new traveler -->
     <string name="enter_new_traveler">Introducir un nuevo viajero</string>
+    <!-- Edit current traveler details -->
+    <string name="edit_guest_details">Editar los datos del huésped</string>
     <!-- Edit current traveler details -->
     <string name="edit_current_traveler">Editar la información del viajero</string>
     <!-- prefers seat template -->
@@ -2330,6 +2342,14 @@
     <string name="error_hotel_no_longer_available">La sesión ha caducado, debes iniciarla de nuevo para poder reservar esta habitación</string>
     <!-- Button label imploring users to pick a new hotel room due to unavailability -->
     <string name="pick_new_hotel">Elige otro hotel</string>
+    <!-- Text for hotel error unknown -->
+    <string name="error_hotel_unhandled">Lo sentimos, no podemos procesar tu pedido en este momento. Vuelve a intentarlo.</string>
+    <!-- Text for hotel error toolbar duplicate trip-->
+    <string name="hotel_duplicate_trip_text">Viaje duplicado</string>
+    <!-- Text for hotel error toolbar payment failed-->
+    <string name="hotel_payment_failed_text">No se ha podido procesar el pago</string>
+    <!-- Text for error toolbar session expired-->
+    <string name="session_timeout">La sesión ha caducado</string>
 
     <!-- Credit card input section -->
     <string name="one">1</string>
@@ -2734,6 +2754,8 @@
         <item quantity="many">Ver %d opiniones</item>
         <item quantity="other">Ver %d opiniones</item>
     </plurals>
+
+    <string name="zero_reviews">0 opiniones</string>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -3130,6 +3152,8 @@
     <string name="e3_error_checkout_payment_failed">Lo sentimos, no se puede procesar el pago. Verifica que has escrito la información correctamente.</string>
     <!-- There is invalid expiration date for the credit card used. Please fix it. -->
     <string name="e3_error_checkout_invalid_expiration">Fecha de caducidad no válida</string>
+    <!-- Error message displayed when the traveler information is invalid -->
+    <string name="e3_error_checkout_invalid_traveler_info_TEMPLATE">Especifica un %1$s válido</string>
 
     <!-- SearchResults API method -->
     <!-- For some reason the API failed and we couldn't complete the search -->
