--- a/project/src/main/res/values-fr-rCA/strings.xml
+++ b/project/src/main/res/values-fr-rCA/strings.xml
@@ -228,6 +228,8 @@
     <string name="reservation_time_too_short">Veuillez augmenter la durée de votre réservation.</string>
     <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">Toujours là? Votre session est expirée. Veuillez recommencer votre recherche.</string>
+    <!-- Shown to user when they try to book something already booked in new Hotels -->
+    <string name="reservation_already_exists_new_hotels">Cette réservation est terminée. Veuillez consulter vos voyages ou vos courriels.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">Hum. Il semble que vous avez déjà réservé ce voyage. Veuillez vérifier vos voyages ou vos courriels.</string>
     <!-- Show to user when the price of a car they are trying to book has changed -->
@@ -236,6 +238,8 @@
     <string name="reservation_invalid_name">Les noms ne doivent pas contenir de chiffres ni de caractères spéciaux.</string>
     <!-- Show to user when their phone number is invalid -->
     <string name="reservation_invalid_phone">Le numéro de téléphone doit être composé de 4 à 20 caractères.</string>
+    <!-- Error button text indicating that the user should search again -->
+    <string name= "search_again">Rechercher de nouveau</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">Hum…Votre paiement n\&apos;a pas été effectué. Veuillez vérifier les détails de votre paiement et recommencer.</string>
@@ -850,7 +854,7 @@
     <!-- Rooms and rates button to add selected room to trip -->
     <string name="room_rate_button_add_to_trip">Ajouter au voyage</string>
     <!-- Rooms and rates button to select a particular room and view details -->
-    <string name="room_rate_button_select_room">Choisir</string>
+    <string name="room_rate_button_select_room">Sélectionner</string>
     <!-- Caption next to the user review rating bar, like "140 reviews" -->
     <string name="n_reviews_TEMPLATE">%1$s évaluations</string>
     <!-- Caption for percent of guests who recommend this hotel including the percentage, i.e. "90% recommend" -->
@@ -2029,6 +2033,12 @@
     <string name="email_address_hint">Adresse courriel</string>
     <!-- phone number hint -->
     <string name="phone_number_hint">Téléphone</string>
+    <!-- phone number -->
+    <string name="phone_number_field_text">numéro de téléphone</string>
+    <!-- first name -->
+    <string name="first_name_field_text">prénom</string>
+    <!-- last name -->
+    <string name="last_name_field_text">nom</string>
     <!-- Cardholder -->
     <string name="cardholder">Détenteur</string>
     <!-- email disclaimer -->
@@ -2143,6 +2153,8 @@
     <string name="select_a_different_traveler">Sélectionner un autre voyageur</string>
     <!-- Enter a new traveler -->
     <string name="enter_new_traveler">Entrer un nouveau voyageur</string>
+    <!-- Edit current traveler details -->
+    <string name="edit_guest_details">Modifier les détails du client</string>
     <!-- Edit current traveler details -->
     <string name="edit_current_traveler">Modifier les renseignements du voyageur</string>
     <!-- prefers seat template -->
@@ -2330,6 +2342,14 @@
     <string name="error_hotel_no_longer_available">Nous sommes désolés, votre réservation de chambre est expirée</string>
     <!-- Button label imploring users to pick a new hotel room due to unavailability -->
     <string name="pick_new_hotel">Choisir un nouvel hôtel</string>
+    <!-- Text for hotel error unknown -->
+    <string name="error_hotel_unhandled">Désolés, nous ne pouvons pas traiter votre commande en ce moment. Veuillez réessayer.</string>
+    <!-- Text for hotel error toolbar duplicate trip-->
+    <string name="hotel_duplicate_trip_text">Reproduire le voyage</string>
+    <!-- Text for hotel error toolbar payment failed-->
+    <string name="hotel_payment_failed_text">Échec de paiement</string>
+    <!-- Text for error toolbar session expired-->
+    <string name="session_timeout">Expiration de la session</string>
 
     <!-- Credit card input section -->
     <string name="one">1</string>
@@ -2342,7 +2362,7 @@
     <string name="eight">8</string>
     <string name="nine">9</string>
     <string name="zero">0</string>
-    <string name="book">Réserver</string>
+    <string name="book">Livre</string>
 
     <!-- Highlight view stuff -->
     <!-- Asks for a security code (CVV code or credit card code) for a card.  %s is the card name, E.g., "Security code for Dan's Platinum VISA" -->
@@ -2615,11 +2635,11 @@
     <!-- Recommended string shown in hotel details -->
     <string name="x_percent_guests_recommend">%2.0f%% de clients recommandent cet hôtel.</string>
     <!-- new material Hotel results cell guest rating -->
-    <string name="customer_rating_percent_Template">{rating} {percent}</string>
+    <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
     <string name="hotel_guest_recommend">sur 5 – évaluation de client</string>
     <!-- new material Hotel results cell discount percentage -->
-    <string name="hotel_discount_percent_Template">{discount} %</string>
+    <string name="hotel_discount_percent_Template">{discount}%</string>
 
     <!-- Amenity strings -->
     <!-- Label to show amenities -->
@@ -2734,6 +2754,8 @@
         <item quantity="many">Afficher %d évaluations</item>
         <item quantity="other">Afficher %d évaluations</item>
     </plurals>
+
+    <string name="zero_reviews">0 évaluation</string>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -2762,7 +2784,7 @@
     <string name="etp_pay_now_charges_text_TEMPLATE">{brand} traitera les détails de vos paiements.</string>
     <string name="etp_pay_now_currency_text_TEMPLATE">Vous paierez dans votre devise locale (%s).</string>
     <string name="etp_pay_now_cancellation_text">L\&apos;annulation est sans frais dans les délais prévus par l\&apos;hôtel.</string>
-    <string name="etp_select_room">Sélectionner une chambre</string>
+    <string name="etp_select_room">Choisir</string>
 
     <!-- Room and rates list -->
     <!-- Loading message for rooms & rates -->
@@ -3129,6 +3151,8 @@
     <string name="e3_error_checkout_payment_failed">Désolé, nous n\&apos;avons pas pu traiter votre paiement. Veuillez vous assurer que l\&apos;information entrée est exacte.</string>
     <!-- There is invalid expiration date for the credit card used. Please fix it. -->
     <string name="e3_error_checkout_invalid_expiration">Date d\&apos;expiration de la carte de crédit non valide.</string>
+    <!-- Error message displayed when the traveler information is invalid -->
+    <string name="e3_error_checkout_invalid_traveler_info_TEMPLATE">Veuillez entrer un %1$s valide</string>
 
     <!-- SearchResults API method -->
     <!-- For some reason the API failed and we couldn't complete the search -->
