--- a/project/src/main/res/values-fr/strings.xml
+++ b/project/src/main/res/values-fr/strings.xml
@@ -228,6 +228,8 @@
     <string name="reservation_time_too_short">Veuillez augmenter la durée de votre réservation.</string>
     <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">Toujours là ? Votre session a expiré. Veuillez effectuer une nouvelle recherche.</string>
+    <!-- Shown to user when they try to book something already booked in new Hotels -->
+    <string name="reservation_already_exists_new_hotels">Cette réservation est terminée. Veuillez vérifier vos voyages ou votre boîte e-mail.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">Hum… On dirait bien que vous avez déjà réservé ce voyage. Veuillez vérifier vos voyages ou votre boîte e-mail.</string>
     <!-- Show to user when the price of a car they are trying to book has changed -->
@@ -236,6 +238,8 @@
     <string name="reservation_invalid_name">Les noms ne peuvent pas contenir de chiffres ou de caractères spéciaux.</string>
     <!-- Show to user when their phone number is invalid -->
     <string name="reservation_invalid_phone">Le numéro de téléphone doit contenir entre 4 et 20 chiffres.</string>
+    <!-- Error button text indicating that the user should search again -->
+    <string name= "search_again">Retenter votre recherche</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">Hum… Votre paiement n\&apos;a pas été accepté. Veuillez vérifier vos détails de paiement et essayer à nouveau.</string>
@@ -2029,6 +2033,12 @@
     <string name="email_address_hint">Adresse e-mail</string>
     <!-- phone number hint -->
     <string name="phone_number_hint">Numéro de téléphone</string>
+    <!-- phone number -->
+    <string name="phone_number_field_text">numéro de téléphone</string>
+    <!-- first name -->
+    <string name="first_name_field_text">prénom</string>
+    <!-- last name -->
+    <string name="last_name_field_text">nom</string>
     <!-- Cardholder -->
     <string name="cardholder">Titulaire de la carte</string>
     <!-- email disclaimer -->
@@ -2143,6 +2153,8 @@
     <string name="select_a_different_traveler">Choisir un autre voyageur</string>
     <!-- Enter a new traveler -->
     <string name="enter_new_traveler">Ajouter un autre voyageur</string>
+    <!-- Edit current traveler details -->
+    <string name="edit_guest_details">Modifier les informations du client</string>
     <!-- Edit current traveler details -->
     <string name="edit_current_traveler">Modifier les informations sur le voyageur</string>
     <!-- prefers seat template -->
@@ -2330,6 +2342,14 @@
     <string name="error_hotel_no_longer_available">Nous sommes sincèrement désolés, votre réservation temporaire de cette chambre a expiré</string>
     <!-- Button label imploring users to pick a new hotel room due to unavailability -->
     <string name="pick_new_hotel">Choisir un autre hôtel</string>
+    <!-- Text for hotel error unknown -->
+    <string name="error_hotel_unhandled">Désolés, nous ne sommes pas en mesure de traiter votre demande pour le moment. Veuillez réessayer.</string>
+    <!-- Text for hotel error toolbar duplicate trip-->
+    <string name="hotel_duplicate_trip_text">Voyage en double</string>
+    <!-- Text for hotel error toolbar payment failed-->
+    <string name="hotel_payment_failed_text">Échec du paiement</string>
+    <!-- Text for error toolbar session expired-->
+    <string name="session_timeout">Expiration de la session</string>
 
     <!-- Credit card input section -->
     <string name="one">1</string>
@@ -2623,9 +2643,9 @@
 
     <!-- Amenity strings -->
     <!-- Label to show amenities -->
-    <string name="AmenityTitle">Équipements et services</string>
+    <string name="AmenityTitle">Services</string>
     <!-- Text that indicates no amenities at this property -->
-    <string name="AmenityNone">Aucun équipement ou service offert</string>
+    <string name="AmenityNone">Aucun équipement offert</string>
     <!-- Business center amenity -->
     <string name="AmenityBusinessCenter">Espace affaires</string>
     <!-- Fitness center amenity -->
@@ -2734,6 +2754,8 @@
         <item quantity="many">Afficher %d avis</item>
         <item quantity="other">Afficher %d avis</item>
     </plurals>
+
+    <string name="zero_reviews">0 avis</string>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -2796,7 +2818,7 @@
 
     <!-- Warning if there are only a few rooms left where %d represents the number of rooms left -->
     <plurals name="number_of_rooms_left">
-        <item quantity="zero">Plus de chambres disponibles sur notre app !</item>
+        <item quantity="zero">Plus de chambre disponible sur notre app !</item>
         <item quantity="one">Il reste 1 chambre disponible sur notre app !</item>
         <item quantity="two">Il reste %d chambres disponibles sur notre app !</item>
         <item quantity="many">Il reste %d chambres disponibles sur notre app !</item>
@@ -3129,6 +3151,8 @@
     <string name="e3_error_checkout_payment_failed">Désolés, nous n\&apos;avons pas pu traiter votre paiement. Veuillez vérifier que les informations que vous avez saisies sont correctes.</string>
     <!-- There is invalid expiration date for the credit card used. Please fix it. -->
     <string name="e3_error_checkout_invalid_expiration">Date d\&apos;expiration de la carte invalide.</string>
+    <!-- Error message displayed when the traveler information is invalid -->
+    <string name="e3_error_checkout_invalid_traveler_info_TEMPLATE">Veuillez saisir un %1$s valide</string>
 
     <!-- SearchResults API method -->
     <!-- For some reason the API failed and we couldn't complete the search -->
