--- a/project/src/main/res/values-it/strings.xml
+++ b/project/src/main/res/values-it/strings.xml
@@ -228,6 +228,8 @@
     <string name="reservation_time_too_short">Aumenta la durata della prenotazione.</string>
     <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">Ci sei ancora? La sessione è scaduta. Effettua nuovamente la ricerca.</string>
+    <!-- Shown to user when they try to book something already booked in new Hotels -->
+    <string name="reservation_already_exists_new_hotels">Questa prenotazione è completa. Verifica i tuoi itinerari o controlla l\&apos;e-mail.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">Mmm. Sembra che tu abbia già prenotato questo viaggio. Verifica i tuoi itinerari o controlla l\&apos;e-mail.</string>
     <!-- Show to user when the price of a car they are trying to book has changed -->
@@ -236,6 +238,8 @@
     <string name="reservation_invalid_name">Il nome non deve contenere numeri o caratteri speciali.</string>
     <!-- Show to user when their phone number is invalid -->
     <string name="reservation_invalid_phone">Il numero di telefono deve contenere almeno 4 caratteri di lunghezza e non deve superare i 20.</string>
+    <!-- Error button text indicating that the user should search again -->
+    <string name= "search_again">Ripeti la ricerca</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">Mmm… Il pagamento non è andato a buon fine. Verifica nuovamente i dettagli di pagamento e riprova.</string>
@@ -2029,6 +2033,12 @@
     <string name="email_address_hint">Indirizzo e-mail</string>
     <!-- phone number hint -->
     <string name="phone_number_hint">Numero di telefono</string>
+    <!-- phone number -->
+    <string name="phone_number_field_text">numero di telefono</string>
+    <!-- first name -->
+    <string name="first_name_field_text">nome</string>
+    <!-- last name -->
+    <string name="last_name_field_text">cognome</string>
     <!-- Cardholder -->
     <string name="cardholder">Titolare della carta</string>
     <!-- email disclaimer -->
@@ -2143,6 +2153,8 @@
     <string name="select_a_different_traveler">Seleziona un altro viaggiatore</string>
     <!-- Enter a new traveler -->
     <string name="enter_new_traveler">Inserisci un nuovo viaggiatore</string>
+    <!-- Edit current traveler details -->
+    <string name="edit_guest_details">Aggiorna i dettagli dell\&apos;ospite</string>
     <!-- Edit current traveler details -->
     <string name="edit_current_traveler">Aggiornare i dati viaggiatore</string>
     <!-- prefers seat template -->
@@ -2330,6 +2342,14 @@
     <string name="error_hotel_no_longer_available">Spiacenti, il tempo a disposizione per prenotare questa camera è scaduto</string>
     <!-- Button label imploring users to pick a new hotel room due to unavailability -->
     <string name="pick_new_hotel">Scegli un altro hotel</string>
+    <!-- Text for hotel error unknown -->
+    <string name="error_hotel_unhandled">Spiacenti, pare che al momento non sia possibile elaborare il tuo ordine. Riprova.</string>
+    <!-- Text for hotel error toolbar duplicate trip-->
+    <string name="hotel_duplicate_trip_text">Viaggio duplicato</string>
+    <!-- Text for hotel error toolbar payment failed-->
+    <string name="hotel_payment_failed_text">Pagamento non riuscito</string>
+    <!-- Text for error toolbar session expired-->
+    <string name="session_timeout">Timeout sessione</string>
 
     <!-- Credit card input section -->
     <string name="one">1</string>
@@ -2734,6 +2754,8 @@
         <item quantity="many">Visualizza %d recensioni</item>
         <item quantity="other">Visualizza %d recensioni</item>
     </plurals>
+
+    <string name="zero_reviews">0 recensioni</string>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -3128,7 +3150,9 @@
     <!-- The hotel booking failed due to a failure in payment. Ask to verify info and try again -->
     <string name="e3_error_checkout_payment_failed">Non è stato possibile elaborare il pagamento. Assicurati di aver inserito correttamente i dati.</string>
     <!-- There is invalid expiration date for the credit card used. Please fix it. -->
-    <string name="e3_error_checkout_invalid_expiration">Data di scadenza della carta di credito</string>
+    <string name="e3_error_checkout_invalid_expiration">Data di scadenza della carta di credito non valida.</string>
+    <!-- Error message displayed when the traveler information is invalid -->
+    <string name="e3_error_checkout_invalid_traveler_info_TEMPLATE">Inserire un %1$s valido</string>
 
     <!-- SearchResults API method -->
     <!-- For some reason the API failed and we couldn't complete the search -->
