--- a/project/src/main/res/values-ja/strings.xml
+++ b/project/src/main/res/values-ja/strings.xml
@@ -228,6 +228,8 @@
     <string name="reservation_time_too_short">予約期間を入力してください。</string>
     <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">セッションの期限が切れました。もう一度お試しください。</string>
+    <!-- Shown to user when they try to book something already booked in new Hotels -->
+    <string name="reservation_already_exists_new_hotels">この予約は完了しています。旅程または電子メールをご確認ください。</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">この旅行はすでにご予約済みのようです。旅行または電子メールをご確認ください。</string>
     <!-- Show to user when the price of a car they are trying to book has changed -->
@@ -236,6 +238,8 @@
     <string name="reservation_invalid_name">名前には数字や特殊文字は含めないでください。</string>
     <!-- Show to user when their phone number is invalid -->
     <string name="reservation_invalid_phone">電話番号は 4 ～ 20 桁以内で入力してください。</string>
+    <!-- Error button text indicating that the user should search again -->
+    <string name= "search_again">もう一度検索してください</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">支払い処理ができませんでした。支払い情報をご確認の上、再度お試しください。</string>
@@ -2029,8 +2033,14 @@
     <string name="email_address_hint">メールアドレス</string>
     <!-- phone number hint -->
     <string name="phone_number_hint">電話番号</string>
+    <!-- phone number -->
+    <string name="phone_number_field_text">電話番号</string>
+    <!-- first name -->
+    <string name="first_name_field_text">名 (例 : Taro)</string>
+    <!-- last name -->
+    <string name="last_name_field_text">姓 (例 : Yamada)</string>
     <!-- Cardholder -->
-    <string name="cardholder">カードの名義人</string>
+    <string name="cardholder">カード名義</string>
     <!-- email disclaimer -->
     <string name="email_disclaimer">確認メールはこちらに送信されます</string>
     <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
@@ -2143,6 +2153,8 @@
     <string name="select_a_different_traveler">別の旅行者を選択</string>
     <!-- Enter a new traveler -->
     <string name="enter_new_traveler">新しい旅行者を入力</string>
+    <!-- Edit current traveler details -->
+    <string name="edit_guest_details">旅行者の詳細を変更</string>
     <!-- Edit current traveler details -->
     <string name="edit_current_traveler">旅行者情報を変更</string>
     <!-- prefers seat template -->
@@ -2330,6 +2342,14 @@
     <string name="error_hotel_no_longer_available">申し訳ありません。保留中の部屋が無効になりました</string>
     <!-- Button label imploring users to pick a new hotel room due to unavailability -->
     <string name="pick_new_hotel">新しいホテルを選択する</string>
+    <!-- Text for hotel error unknown -->
+    <string name="error_hotel_unhandled">申し訳ありません。現在お客様のご予約を完了できません。もう一度お試しください。</string>
+    <!-- Text for hotel error toolbar duplicate trip-->
+    <string name="hotel_duplicate_trip_text">重複した旅行</string>
+    <!-- Text for hotel error toolbar payment failed-->
+    <string name="hotel_payment_failed_text">支払い手続失敗</string>
+    <!-- Text for error toolbar session expired-->
+    <string name="session_timeout">セッション タイムアウト</string>
 
     <!-- Credit card input section -->
     <string name="one">1</string>
@@ -2734,6 +2754,8 @@
         <item quantity="many">%d 件のレビューを表示</item>
         <item quantity="other">%d 件のレビューを表示</item>
     </plurals>
+
+    <string name="zero_reviews">0 件のレビュー</string>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -3129,6 +3151,8 @@
     <string name="e3_error_checkout_payment_failed">申し訳ありません。お支払いの手続きを完了することができませんでした。入力した情報が正しいことを確認してください。</string>
     <!-- There is invalid expiration date for the credit card used. Please fix it. -->
     <string name="e3_error_checkout_invalid_expiration">クレジットカードの有効期限に誤りがあります。</string>
+    <!-- Error message displayed when the traveler information is invalid -->
+    <string name="e3_error_checkout_invalid_traveler_info_TEMPLATE">有効な%1$sを入力してください</string>
 
     <!-- SearchResults API method -->
     <!-- For some reason the API failed and we couldn't complete the search -->
