--- a/project/src/main/res/values-nl/strings.xml
+++ b/project/src/main/res/values-nl/strings.xml
@@ -228,6 +228,8 @@
     <string name="reservation_time_too_short">Verleng de huurperiode voor deze reservering.</string>
     <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">Ben je er nog? Je sessie is verlopen. probeer opnieuw te zoeken.</string>
+    <!-- Shown to user when they try to book something already booked in new Hotels -->
+    <string name="reservation_already_exists_new_hotels">Deze boeking is voltooid. Controleer je reizen of je e-mailadres.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">Wacht even. Het lijkt erop dat je deze reis al hebt geboekt. Controleer je reizen of je e-mailadres.</string>
     <!-- Show to user when the price of a car they are trying to book has changed -->
@@ -236,6 +238,8 @@
     <string name="reservation_invalid_name">Namen mogen geen nummers of speciale tekens bevatten.</string>
     <!-- Show to user when their phone number is invalid -->
     <string name="reservation_invalid_phone">Telefoonnummer dient tussen 4 en 20 tekens te bevatten.</string>
+    <!-- Error button text indicating that the user should search again -->
+    <string name= "search_again">Zoek opnieuw</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">Sorry, de betaling was niet succesvol. Controleer even je betalingsinfo en probeer opnieuw.</string>
@@ -2029,6 +2033,12 @@
     <string name="email_address_hint">E-mailadres</string>
     <!-- phone number hint -->
     <string name="phone_number_hint">Telefoon</string>
+    <!-- phone number -->
+    <string name="phone_number_field_text">telefoonnummer</string>
+    <!-- first name -->
+    <string name="first_name_field_text">voornaam</string>
+    <!-- last name -->
+    <string name="last_name_field_text">achternaam</string>
     <!-- Cardholder -->
     <string name="cardholder">Kaarthouder</string>
     <!-- email disclaimer -->
@@ -2143,6 +2153,8 @@
     <string name="select_a_different_traveler">Kies een andere reiziger</string>
     <!-- Enter a new traveler -->
     <string name="enter_new_traveler">Voer een nieuwe reiziger in</string>
+    <!-- Edit current traveler details -->
+    <string name="edit_guest_details">Gastdetails wijzigen</string>
     <!-- Edit current traveler details -->
     <string name="edit_current_traveler">Reizigersinformatie wijzigen</string>
     <!-- prefers seat template -->
@@ -2330,6 +2342,14 @@
     <string name="error_hotel_no_longer_available">Sorry, maar je reservering voor deze kamer is vervallen</string>
     <!-- Button label imploring users to pick a new hotel room due to unavailability -->
     <string name="pick_new_hotel">Kies een nieuw hotel</string>
+    <!-- Text for hotel error unknown -->
+    <string name="error_hotel_unhandled">Het spijt ons, we kunnen je boeking momenteel niet verwerken. Probeer het opnieuw.</string>
+    <!-- Text for hotel error toolbar duplicate trip-->
+    <string name="hotel_duplicate_trip_text">Dubbele reis</string>
+    <!-- Text for hotel error toolbar payment failed-->
+    <string name="hotel_payment_failed_text">Betaling mislukt</string>
+    <!-- Text for error toolbar session expired-->
+    <string name="session_timeout">Sessie verlopen</string>
 
     <!-- Credit card input section -->
     <string name="one">1</string>
@@ -2734,6 +2754,8 @@
         <item quantity="many">Zie %d beoordelingen</item>
         <item quantity="other">Zie %d beoordelingen</item>
     </plurals>
+
+    <string name="zero_reviews">0 beoordelingen</string>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -3129,6 +3151,8 @@
     <string name="e3_error_checkout_payment_failed">Het spijt ons, maar we konden je betaling niet verwerken. Controleer of jouw ingevoerde gegevens correct zijn.</string>
     <!-- There is invalid expiration date for the credit card used. Please fix it. -->
     <string name="e3_error_checkout_invalid_expiration">Ongeldige vervaldatum creditcard.</string>
+    <!-- Error message displayed when the traveler information is invalid -->
+    <string name="e3_error_checkout_invalid_traveler_info_TEMPLATE">Voer een geldig(e) %1$s in</string>
 
     <!-- SearchResults API method -->
     <!-- For some reason the API failed and we couldn't complete the search -->
