--- a/project/src/main/res/values-pt-rBR/strings.xml
+++ b/project/src/main/res/values-pt-rBR/strings.xml
@@ -228,6 +228,8 @@
     <string name="reservation_time_too_short">Aumente a duração da reserva.</string>
     <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">Ainda está aí? Sua sessão expirou. Tente buscar novamente.</string>
+    <!-- Shown to user when they try to book something already booked in new Hotels -->
+    <string name="reservation_already_exists_new_hotels">Esta reserva foi concluída. Verifique suas viagens ou e-mails.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">Ops. Parece que você já reservou esta viagem. Verifique suas viagens ou e-mails.</string>
     <!-- Show to user when the price of a car they are trying to book has changed -->
@@ -236,6 +238,8 @@
     <string name="reservation_invalid_name">Os nomes não podem conter números nem caracteres especiais.</string>
     <!-- Show to user when their phone number is invalid -->
     <string name="reservation_invalid_phone">O número de telefone deve ter entre 4 e 20 dígitos.</string>
+    <!-- Error button text indicating that the user should search again -->
+    <string name= "search_again">Buscar novamente</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">Seu pagamento não foi processado. Verifique os detalhes do pagamento e tente novamente.</string>
@@ -2028,7 +2032,13 @@
     <!-- email hint -->
     <string name="email_address_hint">Endereço de e-mail</string>
     <!-- phone number hint -->
-    <string name="phone_number_hint">Telefone</string>
+    <string name="phone_number_hint">Número de telefone</string>
+    <!-- phone number -->
+    <string name="phone_number_field_text">número de telefone</string>
+    <!-- first name -->
+    <string name="first_name_field_text">Nome</string>
+    <!-- last name -->
+    <string name="last_name_field_text">Sobrenome</string>
     <!-- Cardholder -->
     <string name="cardholder">Titular</string>
     <!-- email disclaimer -->
@@ -2143,6 +2153,8 @@
     <string name="select_a_different_traveler">Selecionar outro viajante</string>
     <!-- Enter a new traveler -->
     <string name="enter_new_traveler">Inserir um novo viajante</string>
+    <!-- Edit current traveler details -->
+    <string name="edit_guest_details">Editar detalhes do hóspede</string>
     <!-- Edit current traveler details -->
     <string name="edit_current_traveler">Editar informações do viajante</string>
     <!-- prefers seat template -->
@@ -2330,6 +2342,14 @@
     <string name="error_hotel_no_longer_available">Infelizmente sua pré-reserva para este quarto expirou</string>
     <!-- Button label imploring users to pick a new hotel room due to unavailability -->
     <string name="pick_new_hotel">Escolha um novo hotel</string>
+    <!-- Text for hotel error unknown -->
+    <string name="error_hotel_unhandled">No momento não é possível processar seu pedido. Tente novamente.</string>
+    <!-- Text for hotel error toolbar duplicate trip-->
+    <string name="hotel_duplicate_trip_text">Viagem duplicada</string>
+    <!-- Text for hotel error toolbar payment failed-->
+    <string name="hotel_payment_failed_text">Falha no pagamento</string>
+    <!-- Text for error toolbar session expired-->
+    <string name="session_timeout">Tempo limite da sessão</string>
 
     <!-- Credit card input section -->
     <string name="one">1</string>
@@ -2593,7 +2613,7 @@
     <!-- Label for button that lets the user complete the booking through the normal flow -->
     <string name="book_now_ab_test">Selecionar quarto</string>
     <!-- Label for button that lets the user complete the booking by calling a phone number -->
-    <string name="book_by_phone">Reserve por telefone</string>
+    <string name="book_by_phone">Reservar por telefone</string>
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
     <string name="vip_access">+VIP Access</string>
@@ -2689,7 +2709,7 @@
     <!-- Free breakfast -->
     <string name="FilterFreeBreakfast">Café da manhã grátis</string>
     <!-- Free airport shuttle amenity -->
-    <string name="FilterFreeAirportShuttle">Traslado grátis de/para o aeroporto</string>
+    <string name="FilterFreeAirportShuttle">Traslado Grátis de/para o Aeroporto</string>
 
 
     <!-- User Reviews list strings -->
@@ -2721,8 +2741,8 @@
     <plurals name="number_of_reviews">
         <item quantity="zero">Nenhuma avaliação</item>
         <item quantity="one">%d avaliação</item>
-        <item quantity="two">%d avaliações</item>
-        <item quantity="many">%d avaliações</item>
+        <item quantity="two">%d avaliação</item>
+        <item quantity="many">%d avaliação</item>
         <item quantity="other">%d avaliações</item>
     </plurals>
 
@@ -2734,6 +2754,8 @@
         <item quantity="many">Ver %d avaliações</item>
         <item quantity="other">Ver %d avaliações</item>
     </plurals>
+
+    <string name="zero_reviews">0 avaliações</string>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -2962,7 +2984,7 @@
     <!-- Error when applying coupon - the package does not accept coupons -->
     <string name="coupon_error_invalid_booking">Não foi possível aplicar o cupom a esta reserva.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
-    <string name="coupon_error_service_down">Impossível processar cupons no momento. Tente novamente.</string>
+    <string name="coupon_error_service_down">No momento não podemos processar cupons. Tente novamente.</string>
     <!-- Error when applying coupon - session timeout -->
     <string name="coupon_error_service_timeout">Você levou tempo demais para aplicar o código. Tente novamente.</string>
     <!-- Error when applying coupon - Invalid Stay Dates -->
@@ -3129,6 +3151,8 @@
     <string name="e3_error_checkout_payment_failed">Não foi possível processar seu pagamento. Verifique se as informações inseridas estão corretas.</string>
     <!-- There is invalid expiration date for the credit card used. Please fix it. -->
     <string name="e3_error_checkout_invalid_expiration">Data de vencimento do cartão de crédito inválida.</string>
+    <!-- Error message displayed when the traveler information is invalid -->
+    <string name="e3_error_checkout_invalid_traveler_info_TEMPLATE">Digite um %1$s válido</string>
 
     <!-- SearchResults API method -->
     <!-- For some reason the API failed and we couldn't complete the search -->
