--- a/project/src/main/res/values-sv/strings.xml
+++ b/project/src/main/res/values-sv/strings.xml
@@ -228,6 +228,8 @@
     <string name="reservation_time_too_short">Förläng bokningen.</string>
     <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">Är du kvar? Sessionen har gått ut. Försök med din sökning igen.</string>
+    <!-- Shown to user when they try to book something already booked in new Hotels -->
+    <string name="reservation_already_exists_new_hotels">Bokningen har slutförts. Kontrollera dina resor eller din e-post.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">Hmm. Det verkar som om du redan har bokat den här resan. Kontrollera dina resor eller din e-post.</string>
     <!-- Show to user when the price of a car they are trying to book has changed -->
@@ -236,6 +238,8 @@
     <string name="reservation_invalid_name">Namn får inte innehålla siffror eller specialtecken.</string>
     <!-- Show to user when their phone number is invalid -->
     <string name="reservation_invalid_phone">Telefonnummer måste bestå av 4-20 siffror.</string>
+    <!-- Error button text indicating that the user should search again -->
+    <string name= "search_again">Sök igen</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">Hmm…Din betalning gick inte igenom. Kontrollera dina betalningsuppgifter och försök igen.</string>
@@ -2029,6 +2033,12 @@
     <string name="email_address_hint">E-postadress</string>
     <!-- phone number hint -->
     <string name="phone_number_hint">Telefonnummer</string>
+    <!-- phone number -->
+    <string name="phone_number_field_text">telefonnummer</string>
+    <!-- first name -->
+    <string name="first_name_field_text">förnamn</string>
+    <!-- last name -->
+    <string name="last_name_field_text">efternamn</string>
     <!-- Cardholder -->
     <string name="cardholder">Kortinnehavare</string>
     <!-- email disclaimer -->
@@ -2143,6 +2153,8 @@
     <string name="select_a_different_traveler">Välj annan resenär</string>
     <!-- Enter a new traveler -->
     <string name="enter_new_traveler">Ange ny resenär</string>
+    <!-- Edit current traveler details -->
+    <string name="edit_guest_details">Ändra gästuppgifter</string>
     <!-- Edit current traveler details -->
     <string name="edit_current_traveler">Ändra resenärens uppgifter</string>
     <!-- prefers seat template -->
@@ -2330,6 +2342,14 @@
     <string name="error_hotel_no_longer_available">Vi beklagar, vi kunde inte inte hålla rummet längre</string>
     <!-- Button label imploring users to pick a new hotel room due to unavailability -->
     <string name="pick_new_hotel">Välj ett nytt hotell</string>
+    <!-- Text for hotel error unknown -->
+    <string name="error_hotel_unhandled">Vi kan tyvärr inte utföra bokningen just nu. Försök igen.</string>
+    <!-- Text for hotel error toolbar duplicate trip-->
+    <string name="hotel_duplicate_trip_text">Dubbelbokad resa</string>
+    <!-- Text for hotel error toolbar payment failed-->
+    <string name="hotel_payment_failed_text">Betalningen misslyckades</string>
+    <!-- Text for error toolbar session expired-->
+    <string name="session_timeout">Sessionen har gått ut</string>
 
     <!-- Credit card input section -->
     <string name="one">1</string>
@@ -2734,6 +2754,8 @@
         <item quantity="many">Se %d recensioner</item>
         <item quantity="other">Se %d recensioner</item>
     </plurals>
+
+    <string name="zero_reviews">0 recensioner</string>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -3129,6 +3151,8 @@
     <string name="e3_error_checkout_payment_failed">Det uppstod tyvärr ett problem med din betalning. Kontrollera att betalningsuppgifterna du angav är korrekta.</string>
     <!-- There is invalid expiration date for the credit card used. Please fix it. -->
     <string name="e3_error_checkout_invalid_expiration">Ogiltigt utgångsdatum för kreditkort.</string>
+    <!-- Error message displayed when the traveler information is invalid -->
+    <string name="e3_error_checkout_invalid_traveler_info_TEMPLATE">Ange ett giltigt %1$s</string>
 
     <!-- SearchResults API method -->
     <!-- For some reason the API failed and we couldn't complete the search -->
