--- a/project/src/main/res/values-th/strings.xml
+++ b/project/src/main/res/values-th/strings.xml
@@ -228,6 +228,8 @@
     <string name="reservation_time_too_short">โปรดเพิ่มระยะเวลาการจองของคุณ</string>
     <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">คุณยังอยู่ไหม? เซสชั่นของคุณหมดอายุแล้ว โปรดลองค้นหาใหม่อีกครั้ง</string>
+    <!-- Shown to user when they try to book something already booked in new Hotels -->
+    <string name="reservation_already_exists_new_hotels">การจองนี้เสร็จสมบูรณ์แล้ว โปรดตรวจสอบการเดินทางหรืออีเมลของคุณ</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">เดี๋ยวก่อน ดูเหมือนว่าคุณได้จองการเดินทางนี้ไปแล้ว โปรดตรวจสอบการเดินทางหรืออีเมลของคุณ</string>
     <!-- Show to user when the price of a car they are trying to book has changed -->
@@ -236,6 +238,8 @@
     <string name="reservation_invalid_name">ชื่อต้องไม่มีตัวเลขหรืออักขระพิเศษ</string>
     <!-- Show to user when their phone number is invalid -->
     <string name="reservation_invalid_phone">หมายเลขโทรศัพท์ต้องมี 4-20 หลัก</string>
+    <!-- Error button text indicating that the user should search again -->
+    <string name= "search_again">ค้นหาอีกครั้ง</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">การชำระเงินของคุณดำเนินการไม่ผ่าน โปรดตรวจสอบรายละเอียดการชำระเงินของคุณและลองอีกครั้ง</string>
@@ -615,7 +619,7 @@
     <!-- LX search error -->
     <string name="error_lx_current_location_search_message">เราไม่สามารถระบุตำแหน่งของคุณเพื่อค้นหากิจกรรมใกล้ตัวคุณได้</string> 
     <!-- GT current location search error -->
-    <string name="error_gt_current_location_search_message">เราไม่สามารถระบุตำแหน่งของคุณเพื่อค้นหายานพาหนะใกล้ตัวคุณได้</string> 
+    <string name="error_gt_current_location_search_message">เราไม่สามารถระบุตำแหน่งปัจจุบันของคุณเพื่อค้นหายานพาหนะใกล้ตัวคุณได้</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">เกิดข้อผิดพลาด</string>
     <!-- Text for error toolbar-->
@@ -842,7 +846,7 @@
     <!-- Rooms and rates pay now -->
     <string name="room_rate_pay_now">จ่ายตอนนี้</string>
     <!-- Rooms and rates pay later deposit due now -->
-    <string name="room_rate_pay_later_due_now">{amount}จ่ายตอนนี้</string>
+    <string name="room_rate_pay_later_due_now">จ่ายตอนนี้ {amount}</string>
     <!-- Rooms and rates price/night, i.e. $100/night -->
     <string name="room_rate_per_night_template">%s/คืน</string>
     <!-- Rooms and rates resort fees template when fees are included in price displayed i.e. This hotel charges additional fees of $25 -->
@@ -2031,6 +2035,12 @@
     <string name="email_address_hint">อีเมล</string>
     <!-- phone number hint -->
     <string name="phone_number_hint">หมายเลขโทรศัพท์</string>
+    <!-- phone number -->
+    <string name="phone_number_field_text">หมายเลขโทรศัพท์</string>
+    <!-- first name -->
+    <string name="first_name_field_text">ชื่อ</string>
+    <!-- last name -->
+    <string name="last_name_field_text">นามสกุล</string>
     <!-- Cardholder -->
     <string name="cardholder">เจ้าของบัตร</string>
     <!-- email disclaimer -->
@@ -2145,6 +2155,8 @@
     <string name="select_a_different_traveler">เลือกผู้เดินทางคนอื่น</string>
     <!-- Enter a new traveler -->
     <string name="enter_new_traveler">ป้อนผู้เดินทางคนใหม่</string>
+    <!-- Edit current traveler details -->
+    <string name="edit_guest_details">แก้ไขรายละเอียดผู้เข้าพัก</string>
     <!-- Edit current traveler details -->
     <string name="edit_current_traveler">แก้ไขข้อมูลของผู้เดินทาง</string>
     <!-- prefers seat template -->
@@ -2332,6 +2344,14 @@
     <string name="error_hotel_no_longer_available">ขออภัย ห้องที่คุณเลือกไม่มีแล้ว</string>
     <!-- Button label imploring users to pick a new hotel room due to unavailability -->
     <string name="pick_new_hotel">เลือกโรงแรมใหม่</string>
+    <!-- Text for hotel error unknown -->
+    <string name="error_hotel_unhandled">ขออภัย เราไม่สามารถดำเนินการคำสั่งซื้อของคุณได้ในตอนนี้ โปรดลองอีกครั้ง</string>
+    <!-- Text for hotel error toolbar duplicate trip-->
+    <string name="hotel_duplicate_trip_text">ทริปซ้ำกัน</string>
+    <!-- Text for hotel error toolbar payment failed-->
+    <string name="hotel_payment_failed_text">การชำระเงินล้มเหลว</string>
+    <!-- Text for error toolbar session expired-->
+    <string name="session_timeout">เซสชั่นหมดเวลา</string>
 
     <!-- Credit card input section -->
     <string name="one">1</string>
@@ -2736,6 +2756,8 @@
         <item quantity="many">ดู %d รีวิว</item>
         <item quantity="other">ดู %d รีวิว</item>
     </plurals>
+
+    <string name="zero_reviews">0 รีวิว</string>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -2829,7 +2851,7 @@
     <!-- View Room button text -->
     <string name="view_room_button_text">ดูห้องพัก</string>
     <!-- Book Room button text -->
-    <string name="book_room_button_text">หนังสือ</string>
+    <string name="book_room_button_text">จอง</string>
     <!-- Share via when user is shareing hotel listing -->
     <string name="share_via">แชร์ผ่าน</string>
     <!-- Renovation Notice -->
@@ -3131,6 +3153,8 @@
     <string name="e3_error_checkout_payment_failed">ขออภัย ระบบไม่สามารถดำเนินการชำระเงินได้ โปรดตรวจสอบว่าคุณป้อนข้อมูลที่ถูกต้อง</string>
     <!-- There is invalid expiration date for the credit card used. Please fix it. -->
     <string name="e3_error_checkout_invalid_expiration">วันหมดอายุของบัตรเครดิตไม่ถูกต้อง</string>
+    <!-- Error message displayed when the traveler information is invalid -->
+    <string name="e3_error_checkout_invalid_traveler_info_TEMPLATE">โปรดป้อน%1$sที่ถูกต้อง</string>
 
     <!-- SearchResults API method -->
     <!-- For some reason the API failed and we couldn't complete the search -->
