--- a/project/src/main/res/values-vi/strings.xml
+++ b/project/src/main/res/values-vi/strings.xml
@@ -228,6 +228,8 @@
     <string name="reservation_time_too_short">Vui lòng tăng thời gian đặt của quý vị.</string>
     <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">Vẫn đang tìm? Phiên truy cập của quý vị đã hết hạn. Vui lòng tìm lại.</string>
+    <!-- Shown to user when they try to book something already booked in new Hotels -->
+    <string name="reservation_already_exists_new_hotels">Đã hoàn tất đặt phòng này. Vui lòng kiểm tra lại chuyến đi hoặc email.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">Hmm. Có vẻ quý vị đã đặt chuyến đi này. Vui lòng kiểm tra lại chuyến đi hoặc email.</string>
     <!-- Show to user when the price of a car they are trying to book has changed -->
@@ -236,6 +238,8 @@
     <string name="reservation_invalid_name">Không được nhập số hoặc ký tự vào trường tên.</string>
     <!-- Show to user when their phone number is invalid -->
     <string name="reservation_invalid_phone">Số điện thoại phải gồm từ 4 đến 20 chữ số.</string>
+    <!-- Error button text indicating that the user should search again -->
+    <string name= "search_again">Tìm lại</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">Hmm…Thanh toán không thành công. Vui lòng kiểm tra thông tin thanh toán và thử lại.</string>
@@ -2029,6 +2033,12 @@
     <string name="email_address_hint">Địa chỉ email</string>
     <!-- phone number hint -->
     <string name="phone_number_hint">Số điện thoại</string>
+    <!-- phone number -->
+    <string name="phone_number_field_text">số điện thoại</string>
+    <!-- first name -->
+    <string name="first_name_field_text">tên</string>
+    <!-- last name -->
+    <string name="last_name_field_text">họ</string>
     <!-- Cardholder -->
     <string name="cardholder">Chủ thẻ</string>
     <!-- email disclaimer -->
@@ -2143,6 +2153,8 @@
     <string name="select_a_different_traveler">Chọn khách khác</string>
     <!-- Enter a new traveler -->
     <string name="enter_new_traveler">Nhập thông tin khách mới</string>
+    <!-- Edit current traveler details -->
+    <string name="edit_guest_details">Chỉnh sửa thông tin khách</string>
     <!-- Edit current traveler details -->
     <string name="edit_current_traveler">Nhập thông tin khách</string>
     <!-- prefers seat template -->
@@ -2330,6 +2342,14 @@
     <string name="error_hotel_no_longer_available">Rất tiếc, đã quá thời hạn giữ phòng quý vị đang chọn</string>
     <!-- Button label imploring users to pick a new hotel room due to unavailability -->
     <string name="pick_new_hotel">Chọn khách sạn mới</string>
+    <!-- Text for hotel error unknown -->
+    <string name="error_hotel_unhandled">Rất tiếc, chúng tôi hiện không thể xử lý yêu cầu của quý vị. Vui lòng thử lại.</string>
+    <!-- Text for hotel error toolbar duplicate trip-->
+    <string name="hotel_duplicate_trip_text">Chuyến đi trùng</string>
+    <!-- Text for hotel error toolbar payment failed-->
+    <string name="hotel_payment_failed_text">Thanh toán không thành công</string>
+    <!-- Text for error toolbar session expired-->
+    <string name="session_timeout">Hết hạn truy cập phiên</string>
 
     <!-- Credit card input section -->
     <string name="one">1</string>
@@ -2723,7 +2743,7 @@
         <item quantity="one">%d Nhận xét</item>
         <item quantity="two">%d Nhận xét</item>
         <item quantity="many">%d Nhận xét</item>
-        <item quantity="other">%d Nhận xét</item>
+        <item quantity="other">%d nhận xét</item>
     </plurals>
 
     <!-- HOtel V2A number of reviews -->
@@ -2734,6 +2754,8 @@
         <item quantity="many">Xem %d nhận xét</item>
         <item quantity="other">Xem %d nhận xét</item>
     </plurals>
+
+    <string name="zero_reviews">0 nhận xét</string>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -3129,6 +3151,8 @@
     <string name="e3_error_checkout_payment_failed">Rất tiếc, chúng tôi không thể xử lý thanh toán của quý vị. Vui lòng xác nhận quý vị đã nhập thông tin chính xác.</string>
     <!-- There is invalid expiration date for the credit card used. Please fix it. -->
     <string name="e3_error_checkout_invalid_expiration">Ngày hết hạn của thẻ tín dụng không hợp lệ.</string>
+    <!-- Error message displayed when the traveler information is invalid -->
+    <string name="e3_error_checkout_invalid_traveler_info_TEMPLATE">Vui lòng nhập %1$s hợp lệ</string>
 
     <!-- SearchResults API method -->
     <!-- For some reason the API failed and we couldn't complete the search -->
